@@ -439,7 +439,7 @@ class _DHCPServer(libpydhcpserver.dhcp.DHCPServer):
     _dhcp_actions = None #: The MACs and the number of actions each has performed, decremented by one each tick.
     _ignored_addresses = None #: A list of all MACs currently ignored, plus the time remaining until requests will be honoured again.
     
-    def __init__(self, server_address, server_port, client_port, pxe_port, response_interface, database):
+    def __init__(self, server_address, server_port, client_port, pxe_port, response_interface, response_interface_qtags, database):
         """
         Constructs the handler.
         
@@ -467,7 +467,7 @@ class _DHCPServer(libpydhcpserver.dhcp.DHCPServer):
         self._ignored_addresses = []
         
         libpydhcpserver.dhcp.DHCPServer.__init__(
-         self, server_address, server_port, client_port, pxe_port, response_interface=response_interface
+         self, server_address, server_port, client_port, pxe_port, response_interface=response_interface, response_interface_qtags=response_interface_qtags
         )
         
     @_dhcpHandler(_PACKET_TYPE_DECLINE)
@@ -912,7 +912,12 @@ class DHCPService(threading.Thread):
          'server': config.DHCP_SERVER_PORT,
          'client': config.DHCP_CLIENT_PORT,
          'pxe': config.PXE_PORT,
-         'response-interface': config.DHCP_RESPONSE_INTERFACE and '; response-interface: %(response-interface)s' % {'response-interface': config.DHCP_RESPONSE_INTERFACE,} or '',
+         'response-interface': config.DHCP_RESPONSE_INTERFACE and '; raw-response-interface: %(response-interface)s%(qtags)s' % {
+          'response-interface': config.DHCP_RESPONSE_INTERFACE,
+          'qtags': config.DHCP_RESPONSE_INTERFACE_QTAGS and '; raw-response-interface-qtags: %(qtags)r' % {
+           'qtags': config.DHCP_RESPONSE_INTERFACE_QTAGS,
+          } or '',
+         } or '',
         })
         self._dhcp_server = _DHCPServer(
          server_address,
@@ -920,6 +925,7 @@ class DHCPService(threading.Thread):
          config.DHCP_CLIENT_PORT,
          config.PXE_PORT,
          config.DHCP_RESPONSE_INTERFACE,
+         config.DHCP_RESPONSE_INTERFACE_QTAGS,
          database
         )
         _logger.info("Configured DHCP server")
